--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -9,13 +9,13 @@
 window#waybar {
     background: #444444;
     border-bottom: 3px solid rgba(100, 114, 125, 0.5);
-    color: white;
+    color: #c2c2c2;
 }
 
 #workspaces button {
     padding: 0 5px;
     background: transparent;
-    color: white;
+    color: #c2c2c2;
     border-bottom: 3px solid transparent;
     opacity: 0.4;
 }
@@ -26,7 +26,7 @@ window#waybar {
 
 #workspaces button.focused {
     background: #64727D;
-    border-bottom: 3px solid white;
+    border-bottom: 3px solid #c2c2c2;
 }
 
 #workspaces button.urgent {
@@ -35,9 +35,9 @@ window#waybar {
     border-bottom: 3px solid rgb(255, 0, 0);
 }
 
-#mode, 
-#clock, 
-#battery, 
+#mode,
+#clock,
+#battery,
 #mpd,
 #pulseaudio,
 #network,
@@ -47,12 +47,14 @@ window#waybar {
 #backlight,
 #tray {
     margin: 0 8px;
+    color: #c2c2c2;
 }
 
 #mode {
     border-bottom: 3px solid white;
 }
 
+/*
 #pulseaudio {
     color: #ffe15b;
 }
@@ -76,6 +78,7 @@ window#waybar {
 #battery {
     color: white;
 }
+*/
 
 #battery.charging {
     color: #26A65B;
