--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -13,11 +13,12 @@ window#waybar {
 }
 
 #workspaces button {
-    padding: 0 5px;
+    padding: 0;
     background: transparent;
     color: #c2c2c2;
     border-bottom: 3px solid transparent;
     opacity: 0.4;
+    padding: 0 8px;
 }
 
 #workspaces button.visible {
@@ -46,39 +47,14 @@ window#waybar {
 #temperature,
 #backlight,
 #tray {
-    margin: 0 8px;
+    margin: 0;
     color: #c2c2c2;
+    padding: 0 8px;
 }
 
 #mode {
     border-bottom: 3px solid white;
 }
-
-/*
-#pulseaudio {
-    color: #ffe15b;
-}
-
-#network {
-    color: #ff7c7c;
-}
-
-#cpu {
-    color: #84d17a;
-}
-
-#memory {
-    color: #7cc0ff;
-}
-
-#temperature {
-    color: #7c7eff;
-}
-
-#battery {
-    color: white;
-}
-*/
 
 #battery.charging {
     color: #26A65B;
